tests/ui/unexpected_after_array_element.stderr
error: no rules expected the token `=>`
  --> $DIR/unexpected_after_array_element.rs:13:18
   |
13 |     json!([ true => ]);
   |                  ^^ no rules expected the token `=>`

error: aborting due to previous error

